--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@hapi/boom": "^10.0.0",
     "pino": "^8.0.0",
     "figlet": "^1.5.2",
-    "chalk": "^5.0.0",
-    "moment": "^2.29.4"
+    "moment": "^2.29.4",
+    "qrcode-terminal": "^0.12.0",
+    "express": "^4.18.2"
   }
 }
